--- a/src/scss/fotorama.scss
+++ b/src/scss/fotorama.scss
@@ -4,7 +4,7 @@ $white: white;
 $gray: mix(black, white);
 $lightgray: mix($gray, white);
 $blue: mix(#00d1ff, #008ed6);
-$fotorama-image-path: '../i';
+$fotorama-image-path: '../i' !default;
 
 @import 'mixins';
 @import 'placeholders';
